[package]
name = "rustmadehero"
version = "0.1.0"
authors = ["Jairo <'jairosantos08@gmail.com'>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.10.0"
wmi = "0.8.1"
bindings = { package = "bindings", path = "bindings" }
widestring = "0.4.3"
log = "0.4.8"
win_dbg_logger = "0.1.0"